Prefixed products with Tealium name
Prefixed products with Tealium name

--- a/platforms/amp/data-layer/index.html
+++ b/platforms/amp/data-layer/index.html
@@ -264,7 +264,7 @@ var utag_data = {
 
 
 <div class="prose" id="prose">
-  <p>The following parameters are populated by the Tealium AMP Library. These variables are included automatically in each tracking call from the library and are used in your Customer Data Hub configuration.</p>
+  <p>The following parameters are populated by the Tealium AMP Library. These variables are included automatically in each tracking call from the library and are used in your Tealium Customer Data Hub configuration.</p>
 
 <p>In the following table, some variables are used for both page view/event tracking, while some are only used for each.</p>
 
@@ -1508,7 +1508,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
