--- a/platforms/amp/install/index.html
+++ b/platforms/amp/install/index.html
@@ -277,7 +277,7 @@ var utag_data = {
 <h2 id="requirements">Requirements</h2>
 
 <ul>
-<li>Tealium <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Customer Data Hub</a> account</li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Tealium Customer Data Hub</a> account</li>
 </ul>
 
 <h2 id="install">Install</h2>
@@ -331,7 +331,7 @@ var utag_data = {
 <tr>
 <td><code>datasource</code></td>
 <td><code>String</code></td>
-<td>Tealium data source key from Customer Data Hub</td>
+<td>data source key</td>
 <td><code>&quot;abc123&quot;</code></td>
 </tr>
 </tbody>
