--- a/platforms/csharp/data-layer/index.html
+++ b/platforms/csharp/data-layer/index.html
@@ -308,7 +308,7 @@ var utag_data = {
 <tr>
 <td><code>tealium_datasource</code></td>
 <td><code>string</code></td>
-<td>6-char alphanumeric name provided by Customer Data Hub</td>
+<td>6-char alphanumeric name provided by Tealium Customer Data Hub</td>
 <td><code>&quot;abc123&quot;</code></td>
 </tr>
 
