--- a/platforms/csharp/track/index.html
+++ b/platforms/csharp/track/index.html
@@ -327,7 +327,7 @@ instance.JoinTrace(<span style="color:#b84">&#34;TRACE_ID&#34;</span>);
 <span style="color:#998;font-style:italic">//...
 </span><span style="color:#998;font-style:italic"></span>instance.KillTraceSession();
 </code></pre></div>
-<p>The <code>KillTraceSession()</code> method triggers an event to kill/end the visitor trace session at the server. This is useful for testing end-of-visit behavior in your Customer Data Hub configuration.</p>
+<p>The <code>KillTraceSession()</code> method triggers an event to kill/end the visitor trace session at the server. This is useful for testing end-of-visit behavior in your Tealium Customer Data Hub configuration.</p>
 
 <p>The method also calls the <a href="/platforms/csharp/api/#leavetrace"><code>LeaveTrace()</code></a> method to remove the expired <code>tealium_trace_id</code> and stop any more events being sent with the previous trace ID.</p>
 
