--- a/platforms/getting-started/client-side/index.html
+++ b/platforms/getting-started/client-side/index.html
@@ -291,7 +291,7 @@ var utag_data = {
 
 <p>The client-side solution uses a hidden webview to load a special HTML file for mobile devices. This HTML file contains settings to control SDK behavior and it loads the Universal Tag (<code>utag.js</code>) to execute the configuration of the corresponding mobile iQ profile.</p>
 
-<p>When you <a href="https://community.tealiumiq.com/t5/iQ-Tag-Management/Creating-a-Mobile-Profile/ta-p/16328#publish_settings">activate a mobile profile</a> in Tealium iQ, a file named <code>mobile.html</code> is published to the following path on the CDN:</p>
+<p>When you <a href="https://community.tealiumiq.com/t5/iQ-Tag-Management/Creating-a-Mobile-Profile/ta-p/16328#publish_settings">activate a mobile profile</a> in iQ, a file named <code>mobile.html</code> is published to the following path on the CDN:</p>
 
 <p><code>http://tags.tiqcdn.com/utag/ACCOUNT/PROFILE/ENVIRONMENT/mobile.html</code></p>
 
@@ -355,7 +355,7 @@ The more tags you deploy to your app, the more network traffic is generated due 
 
 <h3 id="iq-tag-management-only">iQ Tag Management Only</h3>
 
-<p>You are only subscribed to Tealium iQ Tag Management and do not have access to EventStream.</p>
+<p>You are only subscribed to iQ Tag Management and do not have access to Tealium EventStream.</p>
 
 <h3 id="complex-analytics">Complex Analytics</h3>
 
@@ -381,7 +381,7 @@ The more tags you deploy to your app, the more network traffic is generated due 
 
 <h2 id="tealium-collect-tag">Tealium Collect Tag</h2>
 
-<p>The <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Tealium-Collect-Tag/ta-p/11923">Tealium Collect Tag</a> sends data to the Customer Data Hub server-side product EventStream. This tag is the client-side solution for the <a href="/platforms/getting-started/server-side/#tealium-collect-module">native Collect Module</a>. Using both in your app doubles your usage volume and result in additional charges on your account.</p>
+<p>The <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Tealium-Collect-Tag/ta-p/11923">Tealium Collect Tag</a> sends data to the Tealium Customer Data Hub server-side product EventStream. This tag is the client-side solution for the <a href="/platforms/getting-started/server-side/#tealium-collect-module">native Collect Module</a>. Using both in your app doubles your usage volume and result in additional charges on your account.</p>
 
 <p>The primary benefit of the client-side Tealium Collect tag is the ability to use extensions to customize the data layer prior to collection.</p>
 
