--- a/platforms/getting-started/consent-management/index.html
+++ b/platforms/getting-started/consent-management/index.html
@@ -312,7 +312,7 @@ var utag_data = {
 <h3 id="partial-consent-by-category">Partial Consent (by category)</h3>
 
 <ul>
-<li>If the user has only consented to specific categories, these categories are respected when tags or connectors are fired in Tealium iQ and EventStream.</li>
+<li>If the user has only consented to specific categories, these categories are respected when tags or connectors are fired in Tealium iQ and Tealium EventStream.</li>
 <li>If <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Consent-Change-Event-Specifications/ta-p/23213">Consent Logging</a> is enabled, an event is sent to track the user&rsquo;s consent preferences for auditing purposes only.</li>
 </ul>
 
@@ -321,7 +321,7 @@ var utag_data = {
 <ul>
 <li>All queued tracking calls are  purged.</li>
 <li>All future tracking calls are ignored.</li>
-<li>No events are sent to the Customer Data Hub. Declined consent state are not tracked in the Customer Data Hub.</li>
+<li>No events are sent to the Tealium Customer Data Hub. Declined consent state are not tracked in the Customer Data Hub.</li>
 </ul>
 
 <h2 id="available-actions">Available Actions</h2>
