--- a/platforms/getting-started/data-layer/index.html
+++ b/platforms/getting-started/data-layer/index.html
@@ -280,7 +280,7 @@ var utag_data = {
 
 <p>Each mobile component adds variables to the data layer. The following sections list every variable in each module.</p>
 
-<p>All values are converted to strings. However, numbers can be coerced back into a numeric type as needed using iQ extensions or EventStream enrichments.</p>
+<p>All values are converted to strings. However, numbers can be coerced back into a numeric type as needed using iQ extensions or Tealium EventStream enrichments.</p>
 
 <p class="note">All auto-tracked events set the attribute: <code>autotracked=&quot;true&quot;</code></p>
 
@@ -730,7 +730,7 @@ var utag_data = {
 
 <h2 id="tag-management">Tag Management</h2>
 
-<p>Runs vendor tags configured in iQ Tag Management in a hidden webview.</p>
+<p>Runs vendor tags configured in Tealium iQ Tag Management in a hidden webview.</p>
 
 <table>
 <thead>
@@ -815,7 +815,7 @@ var utag_data = {
 <tr>
 <td align="left"><code>tealium_datasource</code></td>
 <td align="left"><code>String</code></td>
-<td align="left">6 digit alphanumeric identifier provided by the Customer Data Hub</td>
+<td align="left">6 digit alphanumeric identifier provided by the Tealium Customer Data Hub</td>
 <td align="left"><code>&quot;abc123&quot;</code></td>
 </tr>
 
