--- a/platforms/http-api/index.html
+++ b/platforms/http-api/index.html
@@ -1273,7 +1273,7 @@ var utag_data = {
 
     <div class="lh-copy mid-gray links">
       
-          Learn to send data to the Customer Data Hub using the HTTP API for events.
+          Learn to send data to the Tealium Customer Data Hub using the HTTP API for events.
         
     </div>
     </a>
