--- a/platforms/ios-objective-c/data-layer/index.html
+++ b/platforms/ios-objective-c/data-layer/index.html
@@ -264,7 +264,7 @@ var utag_data = {
 
 
 <div class="prose" id="prose">
-  <p>The following variables are populated by the Tealium iOS Library as part of the mobile data layer. These variables are included automatically in each tracking call from the library and used in your iQ or EventStream configurations.</p>
+  <p>The following variables are populated by the Tealium iOS Library as part of the mobile data layer. These variables are included automatically in each tracking call from the library and used in your iQ or Tealium EventStream configurations.</p>
 
 <p>Addition variables are available in the <a href="/platforms/ios-objective-c/module-list/lifecycle-tracking/">Lifecycle Tracking Module</a> for 5.0.x.</p>
 
@@ -1586,7 +1586,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  October 21, 2019 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
