--- a/platforms/ios-objective-c/release-notes/index.html
+++ b/platforms/ios-objective-c/release-notes/index.html
@@ -434,7 +434,7 @@ var utag_data = {
 
 <p>See <a href="https://developer.apple.com/library/content/releasenotes/General/WhatsNewIniOS/Articles/iOS9.html" title="HTTPS and TLS Support requirement.">Apple&rsquo;s Official documentation (App Transport Security section)</a>.</p>
 
-<p><strong>iQ Tag Management Setup Differences</strong></p>
+<p><strong>Tealium iQ Tag Management Setup Differences</strong></p>
 
 <p>New <a href="https://community.tealiumiq.com/t5/Mobile-Libraries/Mobile-202-Publish-Setting-Options-5-x/ta-p/11501">remote configuration options</a> are available for version 5.x. If an account was previously using 4.x, do the following:</p>
 
@@ -1508,7 +1508,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  November 11, 2019 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
