--- a/platforms/ios-objective-c/tag-management/index.html
+++ b/platforms/ios-objective-c/tag-management/index.html
@@ -338,7 +338,7 @@ tealConfig.view <span style="font-weight:bold">=</span> <span style="font-weight
 <tr>
 <td><code>datasource</code></td>
 <td><code>String</code></td>
-<td>(Optional) Tealium data source key from Customer Data Hub (Set to <code>null</code> if none)</td>
+<td>(Optional) data source key (Set to <code>null</code> if none)</td>
 <td><code>&quot;abc123&quot;</code></td>
 </tr>
 </tbody>
