--- a/platforms/ios-objective-c/tvos/index.html
+++ b/platforms/ios-objective-c/tvos/index.html
@@ -281,7 +281,7 @@ var utag_data = {
 <p>Before proceeding, ensure you have satisfied the following requirements:</p>
 
 <ul>
-<li>Active <a href="http://tealium.com/products/audiencestream/">Tealium AudienceStream</a> account</li>
+<li>Active <a href="http://tealium.com/products/AudienceStream/">Tealium Tealium AudienceStream</a> account</li>
 <li>Xcode 7+</li>
 <li>tvOS 9.0+</li>
 <li>100KB available space in <code>.ipa</code> file size</li>
@@ -373,7 +373,7 @@ Tealium <span style="font-weight:bold">*</span>tealiumInstance1 <span style="fon
 
 <tr>
 <td><code>datasource</code></td>
-<td>(Optional) Tealium data source key from Customer Data Hub</td>
+<td>(Optional) data source key</td>
 <td><code>&quot;abc123&quot;</code></td>
 </tr>
 
