--- a/platforms/ios-swift/feature-comparison/index.html
+++ b/platforms/ios-swift/feature-comparison/index.html
@@ -325,7 +325,7 @@ var utag_data = {
 <ul>
 <li>Tealium iQ Tag Management</li>
 <li>Tealium EventStream</li>
-<li>Tealium AudienceStream</li>
+<li>Tealium Tealium AudienceStream</li>
 <li>Tealium DataAccess</li>
 </ul>
 
@@ -381,7 +381,7 @@ var utag_data = {
 <td>Tealium Collect</td>
 <td>✔</td>
 <td>✔</td>
-<td>Sends data to Tealium&rsquo;s Customer Data Hub using a native HTTPS request</td>
+<td>Sends data to Tealium Customer Data Hub using a native HTTPS request</td>
 <td></td>
 </tr>
 
