--- a/platforms/ios-swift/install/index.html
+++ b/platforms/ios-swift/install/index.html
@@ -354,7 +354,7 @@ target <span style="color:#b84">&#39;CPodTest&#39;</span> <span style="font-weig
     <span style="color:#998;font-style:italic"># All platforms. Provides important info about</span>
     <span style="color:#998;font-style:italic"># the app bundle.</span>
     pod <span style="color:#b84">&#34;tealium-swift/TealiumAppData&#34;</span>
-    <span style="color:#998;font-style:italic"># All platforms. Sends data to Customer Data Hub.</span>
+    <span style="color:#998;font-style:italic"># All platforms. Sends data to Tealium Customer Data Hub.</span>
     pod <span style="color:#b84">&#34;tealium-swift/TealiumCollect&#34;</span>
     <span style="color:#998;font-style:italic"># All platforms. Assists with GDPR/privacy compliance.</span>
     pod <span style="color:#b84">&#34;tealium-swift/TealiumConsentManager&#34;</span>
