--- a/platforms/ios-swift/module-list/index.html
+++ b/platforms/ios-swift/module-list/index.html
@@ -1330,7 +1330,7 @@ var utag_data = {
 
     <div class="lh-copy mid-gray links">
       
-          Dispatches tracking calls to Tealium&rsquo;s Customer Data Hub.
+          Dispatches tracking calls to Tealium Customer Data Hub.
         
     </div>
     </a>
