--- a/platforms/ios-swift/module-list/visitor-service/index.html
+++ b/platforms/ios-swift/module-list/visitor-service/index.html
@@ -281,9 +281,9 @@ var utag_data = {
 
 <h2 id="usage">Usage</h2>
 
-<p>The VisitorService module implements the <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Data-Layer-Enrichment/ta-p/684">Data Layer Enrichment</a> feature of the Customer Data Hub.</p>
+<p>The VisitorService module implements the <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Data-Layer-Enrichment/ta-p/684">Data Layer Enrichment</a> feature of the Tealium Customer Data Hub.</p>
 
-<p>Usage of this module is recommended if you are licensed for Tealium AudienceStream and would like to use the visitor profile to enhance the user experience in your mobile application. If you are not licensed for Tealium AudienceStream, usage of this module is not recommended as no visitor profile is returned.</p>
+<p>Usage of this module is recommended if you are licensed for Tealium AudienceStream and would like to use the visitor profile to enhance the user experience in your mobile application. If you are not licensed for AudienceStream, usage of this module is not recommended as no visitor profile is returned.</p>
 
 <p>The following platforms are supported:</p>
 
