--- a/platforms/ios-swift/modules/index.html
+++ b/platforms/ios-swift/modules/index.html
@@ -238,7 +238,7 @@ var utag_data = {
               <li><a href="#recommended-modules">Recommended Modules</a></li>
               <ul class="toc-h3"><li><a href="#base-implementation">Base Implementation</a></li>
               <li><a href="#tag-management">Tag Management</a></li>
-              <li><a href="#eventstream-audiencestream">EventStream/AudienceStream</a></li>
+              <li><a href="#tealium-eventstream-audiencestream">Tealium EventStream/AudienceStream</a></li>
               </ul><li><a href="#install-modules">Install Modules</a></li>
               <ul class="toc-h3"><li><a href="#cocoapods">CocoaPods</a></li>
               <li><a href="#carthage">Carthage</a></li>
@@ -471,9 +471,9 @@ var utag_data = {
 <li>TagManagement</li>
 </ul>
 
-<h3 id="eventstream-audiencestream">EventStream/AudienceStream</h3>
+<h3 id="tealium-eventstream-audiencestream">Tealium EventStream/AudienceStream</h3>
 
-<p>In addition to the base modules, these modules are needed for an EventStream/AudienceStream installation.</p>
+<p>In addition to the base modules, these modules are needed for an EventStream/ AudienceStream installation.</p>
 
 <ul>
 <li>Collect</li>
@@ -1568,7 +1568,7 @@ config.setModulesList(modulesList)</code></pre></div>
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  November 18, 2019 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
