--- a/platforms/ios-swift/release-notes/index.html
+++ b/platforms/ios-swift/release-notes/index.html
@@ -301,7 +301,7 @@ var utag_data = {
 
 <ul>
 <li>For Tag Management, events are dispatched to the <code>WKWebView</code> instance in a batch and are processed individually by JavaScript tags in your profile.</li>
-<li>For EventStream/AudienceStream/Event Data Framework products, events are dispatched in a single HTTP request when using the Collect module. Requests are Gzipped. Once the event limit is reached (max 10 events), they are dispatched immediately, if a connection is available.</li>
+<li>For Tealium EventStream/AudienceStream/Event Data Framework products, events are dispatched in a single HTTP request when using the Collect module. Requests are Gzipped. Once the event limit is reached (max 10 events), they are dispatched immediately, if a connection is available.</li>
 </ul></li>
 <li>To disable event batching, set the batch size to 1</li>
 </ul></li>
