--- a/platforms/javascript/universal-tag/index.html
+++ b/platforms/javascript/universal-tag/index.html
@@ -310,7 +310,7 @@ var utag_data = {
 <p><img src="/images/platforms/javascript/utag-network-files.png" alt="utag-network-files.png" title="utag-network-files.png" /></p>
 
 <ul>
-<li><strong><code>utag.js</code></strong> (tags.tiqcdn.com) - the iQ Tag Management JavaScript library</li>
+<li><strong><code>utag.js</code></strong> (tags.tiqcdn.com) - the Tealium iQ Tag Management JavaScript library</li>
 <li><strong><code>utag.1.js</code></strong> (tags.tiqcdn.com) - the Tealium tag configuration file for Google Analytics</li>
 <li><strong><code>analytics.js</code></strong> (<a href="http://www.google-analytics.com">www.google-analytics.com</a>) - the Google Analytics JavaScript library</li>
 </ul>
@@ -1392,7 +1392,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  December 12, 2019 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
