--- a/platforms/remote-commands/index.html
+++ b/platforms/remote-commands/index.html
@@ -1253,7 +1253,7 @@ var utag_data = {
           Remote Commands
         </h1>
         <div class=" mid-gray f5 f4-l">
-          <p>Remote commands is a feature of the Tealium iOS and Android libraries that allows native code to be triggered using iQ Tag Management.</p>
+          <p>Remote commands is a feature of the Tealium iOS and Android libraries that allows native code to be triggered using Tealium iQ Tag Management.</p>
 
 <p>Remote commands works in conjunction with the TagBridge Custom Command tag and the third-party vendor SDK you wish to integrate into your app.</p>
 
@@ -1275,7 +1275,7 @@ var utag_data = {
 
     <div class="lh-copy mid-gray links">
       
-          Remote commands are a client-side solution for triggering code in your native app using a tag in iQ Tag Management.
+          Remote commands are a client-side solution for triggering code in your native app using a tag in Tealium iQ Tag Management.
         
     </div>
     </a>
