--- a/platforms/remote-commands/integrations/braze/index.html
+++ b/platforms/remote-commands/integrations/braze/index.html
@@ -290,7 +290,7 @@ var utag_data = {
 <ul>
 <li>Braze API key</li>
 <li>Tealium library for Android or Swift/iOS in your app</li>
-<li>Braze Remote Command Tag in iQ Tag Management</li>
+<li>Braze Remote Command Tag in Tealium iQ Tag Management</li>
 </ul>
 
 <h2 id="how-it-works">How It Works</h2>
@@ -2517,7 +2517,7 @@ teal = Tealium(config: config) { responses <span style="font-weight:bold">in</sp
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  December 17, 2019 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
