--- a/platforms/roku/install/index.html
+++ b/platforms/roku/install/index.html
@@ -286,7 +286,7 @@ var utag_data = {
 <p>Before proceeding, ensure you have satisfied the following requirements:</p>
 
 <ul>
-<li>Tealium <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Customer Data Hub</a> account</li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Tealium Customer Data Hub</a> account</li>
 <li><a href="https://sdkdocs.roku.com/display/sdkdoc/Release+Notes">Roku SDK</a> 7.2+</li>
 <li>Active <a href="https://developer.roku.com/developer">Roku Developer Account</a></li>
 <li>Roku Device</li>
