--- a/platforms/amp/track/index.html
+++ b/platforms/amp/track/index.html
@@ -320,7 +320,7 @@ var utag_data = {
 <tr>
 <td><code>datasource</code></td>
 <td><code>String</code></td>
-<td>Tealium data source key from Customer Data Hub</td>
+<td>data source key</td>
 <td><code>&quot;abc123&quot;</code></td>
 </tr>
 </tbody>
