--- a/platforms/android-java/data-layer/index.html
+++ b/platforms/android-java/data-layer/index.html
@@ -264,9 +264,9 @@ var utag_data = {
 
 
 <div class="prose" id="prose">
-  <p>The following variables are populated by the Tealium Android Library as part of the mobile data layer. These variables are included automatically in each tracking call from the library and are useable in your Customer Data Hub configuration.</p>
+  <p>The following variables are populated by the Tealium Android Library as part of the mobile data layer. These variables are included automatically in each tracking call from the library and are useable in your Tealium Customer Data Hub configuration.</p>
 
-<p class="note">These variables are added to your iQ Tag Management account when you <a href="https://community.tealiumiq.com/t5/Mobile-Libraries/Creating-a-Mobile-Profile/ta-p/16328">activate the profile for mobile use</a>.</p>
+<p class="note">These variables are added to your Tealium iQ Tag Management account when you <a href="https://community.tealiumiq.com/t5/Mobile-Libraries/Creating-a-Mobile-Profile/ta-p/16328">activate the profile for mobile use</a>.</p>
 
 <p>Addition variables are available in the <a href="/platforms/android/lifecycle-tracking-module/">Lifecycle Tracking Module</a> for 5.0.x.</p>
 
