--- a/platforms/android-java/install/index.html
+++ b/platforms/android-java/install/index.html
@@ -285,7 +285,7 @@ var utag_data = {
 <li><a href="https://developer.android.com/studio">Android Studio</a></li>
 <li>Android (KitKat/4.4+ / API Level 19+)</li>
 <li><a href="https://community.tealiumiq.com/t5/Getting-Started/Creating-a-Mobile-Profile/ta-p/16328">Mobile Profile</a> (if using Tealium iQ)</li>
-<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Customer Data Hub account</a> (if using Tealium Customer Data Hub)</li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Tealium Customer Data Hub account</a> (if using Customer Data Hub)</li>
 </ul>
 
 <h2 id="sample-apps">Sample Apps</h2>
