--- a/platforms/android-java/tv/index.html
+++ b/platforms/android-java/tv/index.html
@@ -285,7 +285,7 @@ var utag_data = {
 <li>Android (Lollipop/5.0+ / API Level 21+ for Android TV)</li>
 <li>Android (Lollipop/5.1+ / API Level 22+ for Fire TV)</li>
 <li><a href="https://community.tealiumiq.com/t5/Getting-Started/Creating-a-Mobile-Profile/ta-p/16328">Mobile Profile</a> (if using Tealium iQ)</li>
-<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Customer Data Hub account</a> (if using Tealium Customer Data Hub)</li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Tealium Customer Data Hub account</a> (if using Customer Data Hub)</li>
 </ul>
 
 <h2 id="api-reference">API Reference</h2>
