--- a/platforms/android-java/wear/index.html
+++ b/platforms/android-java/wear/index.html
@@ -281,7 +281,7 @@ var utag_data = {
 <ul>
 <li>AndroidWear app with <a href="/platforms/android-java/">Tealium for Android</a></li>
 <li>Android (KitKat/4.4+ / API Level 20+ for Android Wear)</li>
-<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Customer Data Hub account</a></li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Tealium Customer Data Hub account</a></li>
 </ul>
 
 <h2 id="api-reference">API Reference</h2>
