--- a/platforms/csharp/install/index.html
+++ b/platforms/csharp/install/index.html
@@ -277,7 +277,7 @@ var utag_data = {
 <h2 id="requirements">Requirements</h2>
 
 <ul>
-<li>Tealium <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Customer Data Hub</a> account</li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Tealium Customer Data Hub</a> account</li>
 <li>Visual Studio (or other C# compliant IDE)</li>
 </ul>
 
