--- a/platforms/getting-started/mobile-concepts/index.html
+++ b/platforms/getting-started/mobile-concepts/index.html
@@ -286,7 +286,7 @@ var utag_data = {
 
 <h2 id="tealium-collect">Tealium Collect</h2>
 
-<p>Tealium Collect uses HTTPS to send data to the Customer Data Hub.  This approach ensures a light-weight footprint in your app by omitting the webview and leveraging the server-side power of EventStream and AudienceStream to activate your vendor integrations.</p>
+<p>Tealium Collect uses HTTPS to send data to the Tealium Customer Data Hub.  This approach ensures a light-weight footprint in your app by omitting the webview and leveraging the server-side power of Tealium EventStream and Tealium AudienceStream to activate your vendor integrations.</p>
 
 <p><a href="/platforms/getting-started/server-side/">Learn more</a> about the sending data server-side.</p>
 
@@ -298,7 +298,7 @@ var utag_data = {
 
 <h2 id="remote-commands">Remote Commands</h2>
 
-<p>Remote Commands combine the power of native app code with the convenience and control of tags in iQ Tag Management. Remote commands use custom URL schemes as a way for JavaScript tags to trigger methods inside your app. A tag in the hidden webview sends custom requests to the app, which are processed by a handler method that triggers native code or a vendor&rsquo;s SDK.</p>
+<p>Remote Commands combine the power of native app code with the convenience and control of tags in Tealium iQ Tag Management. Remote commands use custom URL schemes as a way for JavaScript tags to trigger methods inside your app. A tag in the hidden webview sends custom requests to the app, which are processed by a handler method that triggers native code or a vendor&rsquo;s SDK.</p>
 
 <p><a href="/platforms/remote-commands/">Learn more</a> about remote commands.</p>
 
@@ -1379,7 +1379,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
