--- a/platforms/getting-started/server-side/index.html
+++ b/platforms/getting-started/server-side/index.html
@@ -275,25 +275,25 @@ var utag_data = {
 
 <h2 id="tealium-collect">Tealium Collect</h2>
 
-<p>To make use of the server-side products in the Customer Data Hub you must add the Tealium Collect service to your installation.</p>
+<p>To make use of the server-side products in the Tealium Customer Data Hub you must add the Tealium Collect service to your installation.</p>
 
 <p>Tealium Collect is activated using one of these methods:</p>
 
 <ul>
-<li>Collect Tag in iQ Tag Management</li>
+<li>Collect Tag in Tealium iQ Tag Management</li>
 <li>Native Collect Module in your app</li>
 </ul>
 
 <p>Once added, Tealium Collect sends HTTPS requests to the Customer Data Hub data collection servers for use with the following server-side products:</p>
 
 <ul>
-<li><a href="https://community.tealiumiq.com/t5/Getting-Started-with-EventStream/tkb-p/13">EventStream</a></li>
-<li><a href="https://community.tealiumiq.com/t5/Getting-Started-with-AudienceStream/tkb-p/15">AudienceStream</a></li>
+<li><a href="https://community.tealiumiq.com/t5/Getting-Started-with-EventStream/tkb-p/13">Tealium EventStream</a></li>
+<li><a href="https://community.tealiumiq.com/t5/Getting-Started-with-AudienceStream/tkb-p/15">Tealium AudienceStream</a></li>
 <li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Introduction-to-DataAccess/ta-p/15611">EventStore</a></li>
 <li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Working-with-AudienceDB-and-EventDB/ta-p/17489">AudienceDB &amp; EventDB</a></li>
 </ul>
 
-<p>Tealium Collect offers many benefits to a mobile application. If you have EventStream and the Collect module installed, then third-party vendor SDK&rsquo;s may be removed from your app and implemented as server-side connectors instead. Offloading vendors to an API hub such as EventStream helps to reduce app size, minimize network traffic, and conserve battery power on the device.</p>
+<p>Tealium Collect offers many benefits to a mobile application. If you have Tealium EventStream and the Collect module installed, then third-party vendor SDK&rsquo;s may be removed from your app and implemented as server-side connectors instead. Offloading vendors to an API hub such as EventStream helps to reduce app size, minimize network traffic, and conserve battery power on the device.</p>
 
 <h3 id="javascript-tag">JavaScript Tag</h3>
 
@@ -319,7 +319,7 @@ var utag_data = {
 <li>Installations without access to iQ Tag Management.</li>
 </ul>
 
-<p class="note">For the Swift library, Teaium Collect must be enabled and disabled in the native code.</p>
+<p class="note">For the Swift library, Tealium Collect must be enabled and disabled in the native code.</p>
 
 <h3 id="data-layer-enrichment">Data Layer Enrichment</h3>
 
