--- a/platforms/getting-started/troubleshooting/index.html
+++ b/platforms/getting-started/troubleshooting/index.html
@@ -235,7 +235,7 @@ var utag_data = {
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
       <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#basics">Basics</a></li>
-              <li><a href="#eventstream-live-events">EventStream Live Events</a></li>
+              <li><a href="#tealium-eventstream-live-events">Tealium EventStream Live Events</a></li>
               <li><a href="#charles-proxy">Charles Proxy</a></li>
               <li><a href="#trace">Trace</a></li>
               <li><a href="#analytics-tools">Analytics Tools</a></li>
@@ -285,7 +285,7 @@ var utag_data = {
 
 <p>Each time you launch the app from a cold start (app was previously swiped away from the app tray), the Tealium SDK checks for new files, and subsequently every 15 minutes by default (controlled by <a href="https://community.tealiumiq.com/t5/Mobile-Libraries/Mobile-Publish-Settings/ta-p/13633">mobile publish settings</a>. However, if it has been less than 5 minutes since publishing, restarting the app does not always work until after the 5 minute expiry time. Switching between the <code>&quot;dev&quot;</code> and <code>&quot;qa&quot;</code> environments while testing alleviates this somewhat, because the cache on the environment expires if not used within the last 5 minutes, and the new file becomes available immediately.</p>
 
-<h2 id="eventstream-live-events">EventStream Live Events</h2>
+<h2 id="tealium-eventstream-live-events">Tealium EventStream Live Events</h2>
 
 <p>The <strong>Live Events</strong> feature in EventStream is available to all Tealium customers for the purpose of debugging mobile installations.</p>
 
@@ -359,7 +359,7 @@ var utag_data = {
 <tbody>
 <tr>
 <td align="left"><code>\*.tealiumiq.com</code></td>
-<td align="left">These hits are sent if you&rsquo;re using AudienceStream&rsquo;s Live Events feature for debugging, as described in Option 1 above.</td>
+<td align="left">These hits are sent if you&rsquo;re using Tealium AudienceStream&rsquo;s Live Events feature for debugging, as described in Option 1 above.</td>
 </tr>
 
 <tr>
@@ -392,7 +392,7 @@ var utag_data = {
 
 <ul>
 <li>Charles Proxy</li>
-<li>Tealium EventStream</li>
+<li>EventStream</li>
 </ul>
 
 <h4 id="using-a-rewrite-in-charles-proxy">Using a Rewrite in Charles Proxy</h4>
@@ -497,7 +497,7 @@ data.put(&quot;cp.trace_id&quot;, &quot;TRACE_ID&quot;);
 
 <h4 id="adding-a-trace-id-in-tealium-iq">Adding a Trace ID in Tealium iQ</h4>
 
-<p>This method requires the Tealium Collect tag in your iQ configuration. First, use Live Events in EventSTream to determine the Universally Unique Identifier (UUID) of your device, then use that value in a Set Data Values extension in iQ to set a trace ID for tracking that comes from your testing device. This is a powerful method while in later stages of development because it does not require editing the native code.</p>
+<p>This method requires the Tealium Collect tag in your iQ configuration. First, use Live Events in EventStream to determine the Universally Unique Identifier (UUID) of your device, then use that value in a Set Data Values extension in iQ to set a trace ID for tracking that comes from your testing device. This is a powerful method while in later stages of development because it does not require editing the native code.</p>
 
 <p>To start a trace log in to EventStream and go to <strong>Live Events</strong>.</p>
 
@@ -597,7 +597,7 @@ data.put(&quot;cp.trace_id&quot;, &quot;TRACE_ID&quot;);
 
 <h2 id="debugging-mobile-html">Debugging mobile.html</h2>
 
-<p>This section shows how to troubleshoot a mobile implementation of iQ Tag Management via the published file <code>mobile.html</code>.</p>
+<p>This section shows how to troubleshoot a mobile implementation of Tealium iQ Tag Management via the published file <code>mobile.html</code>.</p>
 
 <p>When you activate a mobile profile in Tealium iQ a file named <code>mobile.html</code> is published to the following path on the CDN:</p>
 
