--- a/platforms/http-api/data-layer/index.html
+++ b/platforms/http-api/data-layer/index.html
@@ -296,7 +296,7 @@ var utag_data = {
 
 <tr>
 <td><code>tealium_datasource</code></td>
-<td>(Optional) The data source key from Customer Data Hub (<a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Data-Sources/ta-p/17933">Learn more</a> about Data Sources)</td>
+<td>(Optional) The data source key (<a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Data-Sources/ta-p/17933">Learn more</a> about Data Sources)</td>
 </tr>
 
 <tr>
@@ -306,7 +306,7 @@ var utag_data = {
 
 <tr>
 <td><code>tealium_visitor_id</code></td>
-<td>(Required for AudienceStream) An anonymized and unique identifier for the visitor associated with the event (see <a href="#visitor-identifiers">Visitor Identifiers</a> below)</td>
+<td>(Required for Tealium AudienceStream) An anonymized and unique identifier for the visitor associated with the event (see <a href="#visitor-identifiers">Visitor Identifiers</a> below)</td>
 </tr>
 
 <tr>
@@ -320,7 +320,7 @@ var utag_data = {
 
 <h2 id="custom-event-parameters">Custom Event Parameters</h2>
 
-<p>Additional event attributes are sent as custom parameters according to your tracking needs. Define these parameters as <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Using-Attributes/ta-p/11926">event attributes in the Customer Data Hub</a>.</p>
+<p>Additional event attributes are sent as custom parameters according to your tracking needs. Define these parameters as <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Using-Attributes/ta-p/11926">event attributes in the Tealium Customer Data Hub</a>.</p>
 
 </div>
 
