--- a/platforms/ios-objective-c/install/index.html
+++ b/platforms/ios-objective-c/install/index.html
@@ -283,7 +283,7 @@ var utag_data = {
 <li>Xcode 7 and higher</li>
 <li>Compatible with iOS 8.1 and higher</li>
 <li><a href="https://community.tealiumiq.com/t5/Getting-Started/Creating-a-Mobile-Profile/ta-p/16328">Mobile Profile</a> (if using Tealium iQ)</li>
-<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Customer Data Hub account</a> (if using Tealium Customer Data Hub)</li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Tealium Customer Data Hub account</a> (if using Customer Data Hub)</li>
 </ul>
 
 <h2 id="samples-apps">Samples Apps</h2>
@@ -439,7 +439,7 @@ tealConfig.logLevel = .prod</code></pre></div>
 <tr>
 <td><code>datasource</code></td>
 <td><code>String</code></td>
-<td>(Optional) Tealium data source key from Customer Data Hub</td>
+<td>(Optional) data source key</td>
 <td><code>&quot;abc123&quot;</code></td>
 </tr>
 
