--- a/platforms/ios-swift/module-list/collect/index.html
+++ b/platforms/ios-swift/module-list/collect/index.html
@@ -261,7 +261,7 @@ var utag_data = {
 <aside class="bt bw1 pt3 mt2 mid-gray b--mid-gray fn w-100">
   
     <div class="f4 fw4 lh-copy">
-      Dispatches tracking calls to Tealium&rsquo;s Customer Data Hub.
+      Dispatches tracking calls to Tealium Customer Data Hub.
     </div>
   
 
@@ -276,7 +276,7 @@ var utag_data = {
 
 <h2 id="usage">Usage</h2>
 
-<p>The Collect module dispatches tracking calls to Tealium&rsquo;s Customer Data Hub. Usage of this module is strongly recommended if you are using Tealium&rsquo;s Customer Data Hub.</p>
+<p>The Collect module dispatches tracking calls to Tealium Customer Data Hub. Usage of this module is strongly recommended if you are using Customer Data Hub.</p>
 
 <p>As an alternative, if you are using the Tag Management module, you may instead use the Collect tag via Tealium iQ. This may give greater control over the data and events dispatched to the Customer Data Hub, as you may then use load rules and extensions to manipulate the data prior to dispatch. If you are using the Collect tag via Tealium iQ, ensure that the Collect module is <em>disabled</em> to avoid duplicate tracking requests.</p>
 
