--- a/platforms/ios-swift/module-list/datasource/index.html
+++ b/platforms/ios-swift/module-list/datasource/index.html
@@ -282,7 +282,7 @@ var utag_data = {
 
 <p>The DataSource Module adds the data source variable to each dispatch.</p>
 
-<p>Usage of this module is recommended if you are using the Customer Data Hub. Generate a data source key via the Customer Data Hub user interface. If you are using Tag Management only, it currently doesn&rsquo;t have any effect, apart from adding a new variable to each dispatch. <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Data-Sources/ta-p/17933">Learn more</a> about Data Sources.</p>
+<p>Usage of this module is recommended if you are using the Tealium Customer Data Hub. Generate a data source key via the Customer Data Hub user interface. If you are using Tag Management only, it currently doesn&rsquo;t have any effect, apart from adding a new variable to each dispatch. <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Data-Sources/ta-p/17933">Learn more</a> about Data Sources.</p>
 
 <p>The following platforms are supported:</p>
 
