--- a/platforms/java/install/index.html
+++ b/platforms/java/install/index.html
@@ -277,7 +277,7 @@ var utag_data = {
 <h2 id="requirements">Requirements</h2>
 
 <ul>
-<li>Tealium <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Customer Data Hub</a> account.</li>
+<li>Tealium <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Tealium Customer Data Hub</a> account.</li>
 <li>Java IDE (For example, Eclipse or NetBeans).</li>
 <li>Java JDK 7+.</li>
 </ul>
