--- a/platforms/node/install/index.html
+++ b/platforms/node/install/index.html
@@ -272,12 +272,12 @@ var utag_data = {
 <div class="prose" id="prose">
   
 
-<p>The <code>tealium-collect</code> module for Node.js sends event data to the Customer Data Hub via the <a href="/platforms/http-api/">Tealium HTTP API</a>. Use the module in <a href="/getting-started/server-side/">server-side</a> applications or in a browser.</p>
+<p>The <code>tealium-collect</code> module for Node.js sends event data to the Tealium Customer Data Hub via the <a href="/platforms/http-api/">Tealium HTTP API</a>. Use the module in <a href="/getting-started/server-side/">server-side</a> applications or in a browser.</p>
 
 <h2 id="requirements">Requirements</h2>
 
 <ul>
-<li>Tealium <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Customer Data Hub</a> account</li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Customer Data Hub</a> account</li>
 </ul>
 
 <h2 id="install">Install</h2>
