--- a/platforms/python/install/index.html
+++ b/platforms/python/install/index.html
@@ -276,7 +276,7 @@ var utag_data = {
 <h2 id="requirements">Requirements</h2>
 
 <ul>
-<li>Tealium <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Customer Data Hub</a> account</li>
+<li>Tealium <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Tealium Customer Data Hub</a> account</li>
 <li>Python 2.7+ </li>
 </ul>
 
