--- a/platforms/remote-commands/how-it-works/index.html
+++ b/platforms/remote-commands/how-it-works/index.html
@@ -263,7 +263,7 @@ var utag_data = {
 <aside class="bt bw1 pt3 mt2 mid-gray b--mid-gray fn w-100">
   
     <div class="f4 fw4 lh-copy">
-      Remote commands are a client-side solution for triggering code in your native app using a tag in iQ Tag Management.
+      Remote commands are a client-side solution for triggering code in your native app using a tag in Tealium iQ Tag Management.
     </div>
   
 
@@ -276,7 +276,7 @@ var utag_data = {
 <div class="prose" id="prose">
   
 
-<p>Remote commands combine the power of native app code with the convenience and control of tags in iQ Tag Management. Remote commands use custom URL schemes as a way for JavaScript tags to trigger methods inside your app. A tag in the non-rendered web view sends custom requests for the app to receive. These requests are processed by a remote command handler that triggers custom native code or a vendor&rsquo;s SDK.</p>
+<p>Remote commands combine the power of native app code with the convenience and control of tags in Tealium iQ Tag Management. Remote commands use custom URL schemes as a way for JavaScript tags to trigger methods inside your app. A tag in the non-rendered web view sends custom requests for the app to receive. These requests are processed by a remote command handler that triggers custom native code or a vendor&rsquo;s SDK.</p>
 
 <p>Use remote commands in two ways:</p>
 
@@ -287,19 +287,19 @@ var utag_data = {
 
 <h2 id="introduction">Introduction</h2>
 
-<p>Remote Commands (also known as Custom Remote Command/Dynamic Triggers) provide the ability to trigger native code blocks from within the Tealium iQ non-rendered web view. For this reason, Remote Commands are available if you have implemented or explicitly enabled the Tag Management feature/module in your app, since Tealium iQ cannot execute arbitrary code on the device.</p>
+<p>Remote Commands (also known as Custom Remote Command/Dynamic Triggers) provide the ability to trigger native code blocks from within the iQ non-rendered web view. For this reason, Remote Commands are available if you have implemented or explicitly enabled the Tag Management feature/module in your app, since iQ cannot execute arbitrary code on the device.</p>
 
-<p>This feature is primarily used for cases where data held inside the non-rendered web view needs to be passed back to the native code for further processing. For example, you may need to access a value stored in a cookie or localStorage inside the Tealium iQ web view. Another use for this feature would be to personalize parts of your app, for example, you may wish to trigger a survey in the app once the user has been through a particular journey, such as making a purchase.</p>
+<p>This feature is primarily used for cases where data held inside the non-rendered web view needs to be passed back to the native code for further processing. For example, you may need to access a value stored in a cookie or localStorage inside the iQ web view. Another use for this feature would be to personalize parts of your app, for example, you may wish to trigger a survey in the app once the user has been through a particular journey, such as making a purchase.</p>
 
 <p>The flow for this particular example would be:</p>
 
 <ol>
 <li>Create some generic native code capable of triggering a local notification on the device, which prompts the user to take a survey.</li>
 <li>Register this block of code as a Remote Command with the Tealium API.</li>
-<li>In Tealium iQ, create a new &ldquo;Custom Remote Command&rdquo; tag, and make sure the command ID matches the command ID you used to register the command in the native code.</li>
+<li>In iQ, create a new &ldquo;Custom Remote Command&rdquo; tag, and make sure the command ID matches the command ID you used to register the command in the native code.</li>
 <li>Mappings can be set up to pass specific data variables back to the app. For example, you might wish to pass a customized survey message back to the app such as &ldquo;Thank you for making a purchase. Would you mind taking a short survey?&rdquo;. You might also pass back a specific URL to open when the user clicks the notification, so that you can pass the user through to a specific web-hosted survey using your survey tool of choice.</li>
 <li>In the app, the native code will look for specific variables passed back in the response such as <code>survey_url</code> and <code>survey_title</code>, display the message in the notification, and launch a web view or the native browser when the user clicks the notification.</li>
-<li>If you wish to change the survey URL, or the message displayed to the user, you can now control this through Tealium iQ extensions, without needing to re-deploy your app. You can also disable the survey at-will, or change the trigger that leads to the survey being displayed. For example, display on the home screen instead of the order confirmation screen.</li>
+<li>If you wish to change the survey URL, or the message displayed to the user, you can now control this through iQ extensions, without needing to re-deploy your app. You can also disable the survey at-will, or change the trigger that leads to the survey being displayed. For example, display on the home screen instead of the order confirmation screen.</li>
 </ol>
 
 <h2 id="components">Components</h2>
@@ -307,7 +307,7 @@ var utag_data = {
 <p>A remote command is structured similarly to a tracked event: it has a command name and a payload of data.</p>
 
 <ul>
-<li><strong>command</strong>: the name of the command, or &ldquo;command ID&rdquo;, registered with native code in your app and with a tag in Tealium iQ.</li>
+<li><strong>command</strong>: the name of the command, or &ldquo;command ID&rdquo;, registered with native code in your app and with a tag in iQ.</li>
 <li><strong>payload</strong>: the data passed from the tag to the native app, configured as data mappings and received in the app as a <code>requestPayload</code> object in the response callback of the handler.</li>
 </ul>
 
@@ -1435,7 +1435,7 @@ pod &quot;TealiumVendorXYZ&quot;
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  October 29, 2019 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
