--- a/platforms/getting-started/troubleshooting/index.html
+++ b/platforms/getting-started/troubleshooting/index.html
@@ -287,7 +287,7 @@ var utag_data = {
 
 <h2 id="tealium-eventstream-live-events">Tealium EventStream Live Events</h2>
 
-<p>The <strong>Live Events</strong> feature in EventStream is available to all Tealium customers for the purpose of debugging mobile installations.</p>
+<p>The <strong>Live Events</strong> feature in Tealium EventStream is available to all Tealium customers for the purpose of debugging mobile installations.</p>
 
 <p class="note">If you enable this in a production environment, you may be charged for the volume usage. Be sure to disable this feature before your app goes live.</p>
 
@@ -392,7 +392,7 @@ var utag_data = {
 
 <ul>
 <li>Charles Proxy</li>
-<li>EventStream</li>
+<li>Tealium EventStream</li>
 </ul>
 
 <h4 id="using-a-rewrite-in-charles-proxy">Using a Rewrite in Charles Proxy</h4>
