--- a/platforms/ios-objective-c/tvos/index.html
+++ b/platforms/ios-objective-c/tvos/index.html
@@ -281,7 +281,7 @@ var utag_data = {
 <p>Before proceeding, ensure you have satisfied the following requirements:</p>
 
 <ul>
-<li>Active <a href="http://tealium.com/products/AudienceStream/">Tealium Tealium AudienceStream</a> account</li>
+<li>Active <a href="http://tealium.com/products/AudienceStream/">Tealium AudienceStream</a> account</li>
 <li>Xcode 7+</li>
 <li>tvOS 9.0+</li>
 <li>100KB available space in <code>.ipa</code> file size</li>
