--- a/platforms/ios-swift/feature-comparison/index.html
+++ b/platforms/ios-swift/feature-comparison/index.html
@@ -325,7 +325,7 @@ var utag_data = {
 <ul>
 <li>Tealium iQ Tag Management</li>
 <li>Tealium EventStream</li>
-<li>Tealium Tealium AudienceStream</li>
+<li>Tealium AudienceStream</li>
 <li>Tealium DataAccess</li>
 </ul>
 
