--- a/platforms/ruby/install/index.html
+++ b/platforms/ruby/install/index.html
@@ -275,7 +275,7 @@ var utag_data = {
 <h2 id="requirements">Requirements</h2>
 
 <ul>
-<li>Tealium <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Tealium Customer Data Hub</a> account.</li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Tealium Customer Data Hub</a> account.</li>
 <li>Use of this software is subject to the terms and conditions of the license agreement contained in the file titled <a href="https://github.com/Tealium/tealium-ruby/blob/master/LICENSE.txt"><code>LICENSE.txt</code></a>. Read the license before downloading or using any of the files contained in this repository. By downloading or using any of these files, you are agreeing to be bound by and comply with the license agreement.</li>
 </ul>
 
