other very minor typos
other very minor typos

--- a/platforms/amp/install/index.html
+++ b/platforms/amp/install/index.html
@@ -331,7 +331,7 @@ var utag_data = {
 <tr>
 <td><code>datasource</code></td>
 <td><code>String</code></td>
-<td>data source key</td>
+<td>Data source key</td>
 <td><code>&quot;abc123&quot;</code></td>
 </tr>
 </tbody>
