Moved event batching to install page, and linkify MPS
Moved event batching to install page, and linkify MPS

--- a/platforms/ios-swift/release-notes/index.html
+++ b/platforms/ios-swift/release-notes/index.html
@@ -285,12 +285,12 @@ var utag_data = {
 <p><strong>New Features</strong></p>
 
 <ul>
-<li><p>Support for Mobile Publish Settings<br />
+<li><p>Support for <a href="https://community.tealiumiq.com/t5/iQ-Tag-Management/Creating-a-Mobile-Profile/ta-p/16328">Mobile Publish Settings</a><br />
 <p class="note"><strong>Mobile Publish Settings are enabled by default, and must be disabled if you don’t wish to use them.</strong></p></p>
 
 <ul>
 <li>Adds the ability to remotely change certain configuration options, such as event batch size, from the Tealium iQ Mobile Publish Settings interface.</li>
-<li>This matches the functionality already present in Tealium iOS (Objective-C) and Tealium Android libraries. [Learn More])(<a href="https://community.tealiumiq.com/t5/iQ-Tag-Management/Creating-a-Mobile-Profile/ta-p/16328">https://community.tealiumiq.com/t5/iQ-Tag-Management/Creating-a-Mobile-Profile/ta-p/16328</a>)</li>
+<li>This matches the functionality already present in Tealium iOS (Objective-C) and Tealium Android libraries. <a href="https://community.tealiumiq.com/t5/iQ-Tag-Management/Creating-a-Mobile-Profile/ta-p/16328">Learn More</a></li>
 </ul></li>
 
 <li><p>Swift Package Manager (SPM) support. <a href="/platforms/ios-swift/install">Learn More</a></p></li>
